♻️ JUnit 4 -> JUnit 5